tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__DezilsMarshmallo-AAAAAAAAAAAAAAAAAAAF0A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1488,
  "prerequisites": [
    1487
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In the last step you need to infuse your Marshmallow with some epic food in the thaumcraft infusion altar. Before you can do it you need to unlock the research.\n\nIs this worth it? Is there any enemy worthy of using the buffs this gives on? That's up to you.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Dezil's Marshmallow",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1487
  ],
  "rewards": [],
  "tasks": []
}
