tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__FishingFarmingCo-AAAAAAAAAAAAAAAAAAAACg==__EvenMoreStats-AAAAAAAAAAAAAAAAAAAK0Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2769,
  "prerequisites": [
    1794
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are seven more stats to worry about too.\n\n§7Fertilizer§r, §9Water§r, and [warn]Weed-EX[/warn] are all about how much of these is on the crop stick rather than the crop itself. They're all about how much was applied, and is left of that.\n\n§2Nutrients§r, §1Humidity§r, and §6Air Quality§r are all about the environment. They're also affected by the Fertilizer and Water stats.\n\nNutrients and Humidity are mostly about the right biome, with swamp and rainforest types (hot+humid) being the best, but you can also get some extra stats by setting up right.\n\n§2Nutrients§r:\n3 possible free points from dirt under the farmland block, 2 for plants that require a specific block. So optimally always make sure that the required block is at the bottommost bottom in the column, because it checks in chain, not certain height. For example: cropstick -> farmland -> dirt -> ore block -> dirt, it will only register 1 dirt, ignoring the one below the oreb block.\n\n5-10 possible points from fertilizing your crops. You can use fertilizer on a crop to increase its nutrient stat. Fertilizer caps at 199 which gives 10 nutrients, but can be applied again only if the crop drops below 100 fertilizer points. So for high stat crops it's safe to assume and make tests for 100 fertilizer points as it's a given constant unlike 199->100 values. You can apply bone meal, IC2 fertilizer and Forestry fertilizer to a crop by hand. Forestry manual orchard multifarm and crop matron does this automatically when supplied with fertilizer (the multifarm needs fertilizer to harvest crops as well).\n\n§1Humidity§r:\n2 free points from using dirt as farmland, as when farmland gets hydrated by water(turns darker) it gains 2 humidity points. This is why other blocks for this suck, since they don't give this bonus.\n\n10 possible points from hydrating your crop. Similar to fertilizing, water can be applied to crop up to 200 points, which is 10 humidity points, although unlike fertilizer it does not need to drop below value of 100, water can be applied over and over keeping it at constant 200 points. You can apply water to your crop by using IC2 hydration cells by hand, or let your Forestry manual orchard multifarm and crop matron do it automatically. The multifarm needs water to harvest crops as well though.\n\n§6Air Quality§r:\n4 potential free points from empty space around crop. A crop checks for empty spaces to calculate bonus air quality points, it gives up to 4 points, 1 point for each 2 empty spaces. It only counts full blocks or cropsticks though. If you like looks, you'll probably have to sacrifice this.\n\n4 free points from height of your farm. You get 1 free point every 15 blocks starting at Y79.\n79 - 1 point\n94 - 2 points\n109 - 3 points\n124 - 4 points\n\n2 free points from no opaque blocks above the crop. You can place glass above and you won't lose the bonus since it's a transparent block. You cannot use dark glass, several layers of water, or gaseous tenebrae to get around this if your crop likes the dark. Unless you only let it grow at night I guess.\n\n§aGrowability§r:\nYour crop will require a certain level of NHA, try to reach or surpass this, or the crop will either not grow, or even die (disappear). Each crop is different, and higher tiers (and stats) require more. It's generally easy to meet though, as long as you're in a good biome.\n\nGrowability is determined by the difference between what the crop needs in terms of NHA, and what it actually has. If you have more than what you need it grows faster. This is why you don't want a maxed resistance stat, since higher stats will slow it down.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Even More Stats",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1794
  ],
  "rewards": [],
  "tasks": []
}
